[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "DiscordNuker"
version = "0.0.1"
authors = [
  { name="tidhsjsbfndjdjsjedb", email="tidfudgughx@gmail.com" },
]
description = "DiscordNuker"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/joinpxteamtoday1-cell/"
Issues = "https://github.com/joinpxteamtoday1-cell/ideal-train/tree/main"
