[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dis-nuke"
version = "0.1.0"
description = "Discord utility package"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "discord.py",
  "aiohttp",
  "colorama",
  "Pillow"
]

[tool.setuptools]
packages = ["dis-nuke"]
